Bug 698860 - 'Workers: Cycle collector calls DOM worker from wrong thread'. r=sicking.